# photo_gallery_pro

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/binkap/photo_gallery_pro/: PhotoGalleryProPlugin.kt
android/src/test/kotlin/com/binkap/photo_gallery_pro/: PhotoGalleryProPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/binkap/photo_gallery_pro_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
ios/: photo_gallery_pro.podspec
ios/Classes/: PhotoGalleryProPlugin.swift
lib/: photo_gallery_pro.dart  photo_gallery_pro_method_channel.dart  photo_gallery_pro_platform_interface.dart
lib/src/: album.dart  media.dart  media_type.dart  thumbnail.dart
linux/: CMakeLists.txt  photo_gallery_pro_plugin.cc  photo_gallery_pro_plugin_private.h
linux/include/photo_gallery_pro/: photo_gallery_pro_plugin.h
linux/test/: photo_gallery_pro_plugin_test.cc
test/: photo_gallery_pro_method_channel_test.dart  photo_gallery_pro_test.dart
